# qt_bazel_prebuilts

./: .gitignore  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  README.md  qt_internal_library.bzl  qt_tools.bzl
interface_libs/X11/: BUILD.bazel  libICE.ifso  libSM.ifso  libX11-xcb.ifso  libX11.ifso
interface_libs/dbus/: BUILD.bazel  libdbus-1.ifso  main.cc
interface_libs/fontconfig/: BUILD.bazel  libfontconfig.ifso
interface_libs/xcb/: BUILD.bazel  libxcb-cursor.ifso  libxcb-icccm.ifso  libxcb-image.ifso  libxcb-keysyms.ifso  libxcb-randr.ifso  libxcb-render-util.ifso  libxcb-render.ifso  libxcb-shape.ifso  libxcb-shm.ifso  libxcb-sync.ifso  libxcb-xfixes.ifso  libxcb-xkb.ifso  libxcb.ifso
interface_libs/xkbcommon/: BUILD.bazel  libxkbcommon-x11.ifso  libxkbcommon.ifso
linux/: Dockerfile
qt_source/: BUILD.bazel
qt_source/qtbase-6.9.1/include/QtGui/: qtgui-config.h
test/: BUILD.bazel  main.cc
